# GoblinBurner

./: GoblinBurner.cabal
.stack-work/install/x86_64-linux/lts-8.5/8.0.2/flag-cache/: GoblinBurner-0.1.0.0-FnOKHJGjH0sKjrIW1PckOq  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  parsec-3.1.11-113irVHGgd88sRnywByDNw  random-1.1-9tceXaeYIMZ4JrKq20Egog  readline-1.0.3.0-7WqJPjOS9HEE95ifi9FvTC  text-1.2.2.1-Ji7hMs2U4BkBwavd4taEVR
.stack-work/install/x86_64-linux/lts-8.5/8.0.2/lib/x86_64-linux-ghc-8.0.2/GoblinBurner-0.1.0.0-9BGpxHuB4WvZG8Ab7rdhV/: AST.dyn_hi  Interface.dyn_hi  Interface.hi  Mannager.dyn_hi  Mannager.hi  Parser.dyn_hi  Parser.hi
.stack-work/install/x86_64-linux/lts-8.5/8.0.2/lib/x86_64-linux-ghc-8.0.2/GoblinBurner-0.1.0.0-FnOKHJGjH0sKjrIW1PckOq/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux/lts-8.5/8.0.2/lib/x86_64-linux-ghc-8.0.2/GoblinBurner-0.1.0.0-I1JAjz4cEJL8vh9rdrHCnV/: Mannager.dyn_hi  Mannager.hi
.stack-work/install/x86_64-linux/lts-8.5/8.0.2/pkgdb/: GoblinBurner-0.1.0.0-9BGpxHuB4WvZG8Ab7rdhV.conf  GoblinBurner-0.1.0.0-I1JAjz4cEJL8vh9rdrHCnV.conf  package.cache
app/: Main.hs
files/: BW_config  Rocket&Valhar  hitos_config
src/: AST.hs  Interface.hs  Mannager.hs  Parser.hs  README.md
