name:                GoblinBurner
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/GoblinBurner#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Interface,
                       AST,
                       Mannager,
                       Parser
  build-depends:       base >= 4.7 && < 5,
                       random,
                       parsec,
                       process,
                       readline
  default-language:    Haskell2010

executable GoblinBurner-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       GoblinBurner
  default-language:    Haskell2010

test-suite GoblinBurner-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , GoblinBurner
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/GoblinBurner
